--- a/web0/webes/index.html
+++ b/web0/webes/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" class="js" lang="cat"><head>
+<html xmlns="http://www.w3.org/1999/xhtml" class="js" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="description" content="Exercici M5UF2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 <head>					
-<title>Primer Web M5UF2</title>
+<title>Primera Web M5UF2</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="bootstrap.min.js"></script>
-<script src="jquery.min.js"></script>
-<link rel="stylesheet" href="estils.css">
+<link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<link rel="stylesheet" href="../css/estils.css">
 </head>
 
 <body>
 
 <div class="container contact-form">
             <div class="contact-image">
-                <img src="logitobonito.png" alt="logito"/>
+                <img src="../img/logitobonito.png" alt="logito"/>
             </div>
             <form method="post">
-                <h3>Deixan's un missatge</h3>
+                <h3>Envia un mensaje</h3>
                <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" name="txtName" class="form-control" placeholder="Nom *" value="" />
+                            <input type="text" name="txtName" class="form-control" placeholder="Nombre *" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtEmail" class="form-control" placeholder="Correu *" value="" />
+                            <input type="text" name="txtEmail" class="form-control" placeholder="Correo *" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Telefon *" value="" />
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Telefono *" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" name="btnSubmit" class="btnContact" value="Envian's el missatge" />
+                            <input type="submit" name="btnSubmit" class="btnContact" value="Envianos el mensaje" />
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" placeholder="Missatge *" style="width: 100%; height: 150px;"></textarea>
+                            <textarea name="txtMsg" class="form-control" placeholder="Mensaje *" style="width: 100%; height: 150px;"></textarea>
                         </div>
                     </div>
                 </div>
